--- a/Equip4/Equip4/Equip4.Android/Equip4.Android.csproj
+++ b/Equip4/Equip4/Equip4.Android/Equip4.Android.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E183BFDE-26D4-4030-854D-89EA4F013F3B}</ProjectGuid>
+    <ProjectGuid>{6FBED737-154A-4E7C-8408-719D12887B93}</ProjectGuid>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <RootNamespace>Equip4.Droid</RootNamespace>
@@ -79,9 +79,17 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
-
-
-  <Import Project="..\Equip4\Equip4.projitems" Label="Shared" />
-
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Equip4\Equip4.csproj">
+      <Project>{C88ACA4F-1EA1-4646-A374-C67F3F1DE717}</Project>
+      <Name>Equip4</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LogoTransparent.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\gmail.png" />
+  </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
