--- a/Equip4/Equip4/Equip4.iOS/Equip4.iOS.csproj
+++ b/Equip4/Equip4/Equip4.iOS/Equip4.iOS.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6FE51808-2B02-44B3-961A-89FB2464D6D5}</ProjectGuid>
+    <ProjectGuid>{849CD15E-30AB-41F4-A24D-F5DD86DB17CF}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
     <RootNamespace>Equip4.iOS</RootNamespace>
@@ -122,5 +122,10 @@
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
-  <Import Project="..\Equip4\Equip4.projitems" Label="Shared" />
+  <ItemGroup>
+    <ProjectReference Include="..\Equip4\Equip4.csproj">
+      <Project>{C88ACA4F-1EA1-4646-A374-C67F3F1DE717}</Project>
+      <Name>Equip4</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
