--- a/Equip4/Equip4/LogIn/LogIn/LogIn.iOS/Info.plist
+++ b/Equip4/Equip4/LogIn/LogIn/LogIn.iOS/Info.plist
@@ -50,5 +50,11 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>LogIn</string>
+	<array>
+		<string>es</string>
+	</array>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	
 </dict>
 </plist>
