--- a/LogIn/LogIn/LogIn/LogIn.csproj
+++ b/LogIn/LogIn/LogIn/LogIn.csproj
@@ -66,6 +66,9 @@
     <EmbeddedResource Update="Views\PassarLlistaPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\RegisterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\UsuarioPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
